--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
         <p class="lead mb-5">
           I am an Undergraduate Student in Physics (Mathematics Minor) at <a href="https://lums.edu.pk/" target="_blank">Lahore University of Management Sciences </a> (LUMS), where I work with Prof. Adam Zaman on Open Quantum Dynamics and Information Theory.
 
-          <br/><br/>My broad research interests include Quantum Information Theory and Quantum Many-Body Systems &#8211; in particular, I am interested in Quantum Error Correction through Decoherence reduction and Lindblad Master Equations associated with Markovian Dynamics.
+          <br/><br/>My broad research interests include <a href="https://sbasse.lums.edu.pk/the-quantum-revolution" target="_blank">Quantum Information Theory</a> and <a href="https://sbasse.lums.edu.pk/the-quantum-revolution" target="_blank">Quantum Many-Body Systems</a> &#8211; in particular, I am interested in Quantum Error Correction through Decoherence reduction and Lindblad Master Equations associated with Markovian Dynamics.
 
           <br/><br/>I also work at the <a href="https://lgsdefence.edu.pk/" target="_blank">Lahore Grammar School Defence Campus</a> as a full time public speaking coach. My non-academic interests include tennis, mixed martial arts and video games.
         </p>
