--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@
                   <p class="lead mb-4">
                     <br><b>3. Quantum Nature of Light</b> <span style="float:right;">November 2022</span> <br>
                     <u>Sharjeel Ahmad</u><br>
-                    Experimental Physics Lab II - PHY
+                    Experimental Physics Lab II - PHY 300
                     <br><br>
 
                     <a href="projects/Spontaneous Down Conversion.pdf" target="_blank"><i
