date color change

--- a/index.html
+++ b/index.html
@@ -107,6 +107,10 @@
       width: 200px;
       height: 200px;
     }
+    .date-proj {
+      float:right;
+      color:#aa2525
+    }
   </style>
 </head>
 
@@ -220,7 +224,7 @@
                 <td style="width: 80%;">
                   <br>
                   <p class="lead mb-4">
-                    <br><b>Fundamentals of Quantum Linear Response Theory</b> <span style="float:right;">May 2023</span>
+                    <br><b>Fundamentals of Quantum Linear Response Theory</b> <span class="date-proj">May 2023</span>
                     <br>
                     <u>Sharjeel Ahmad</u> and <a href="https://lums.edu.pk/lums_employee/4056" target="_blank"> Adam
                       Zaman</a><br>
@@ -251,7 +255,7 @@
                 <td style="width: 80%;">
                   <br>
                   <p class="lead mb-4">
-                    <b>1. Approximate Fourier Transforms and its Applications</b> <span style="float:right;">March
+                    <b>1. Approximate Fourier Transforms and its Applications</b> <span class="date-proj">March
                       2023</span> <br>
                     <u>Sharjeel Ahmad</u>, Rehan Ahmad and Hania Shahid <br>
                     Introduction to Quantum Information Science and Technology - PHY 612
@@ -274,8 +278,7 @@
                 <td style="width: 80%;">
                   <br>
                   <p class="lead mb-4">
-                    <br><b>2. Path Integral Quantization of Scalar, EM and Spinor Fields</b> <span
-                      style="float:right;">March 2023</span> <br>
+                    <br><b>2. Path Integral Quantization of Scalar, EM and Spinor Fields</b> <span class="date-proj"> March 2023</span> <br>
                     <u>Sharjeel Ahmad</u> and Ali Shahryar Khokhar <br>
                     Introduction to Quantum Field Theory - PHY 539
                     <br><br>
@@ -299,7 +302,7 @@
                 <td style="width: 80%;">
                   <br>
                   <p class="lead mb-4">
-                    <br><b>3. Quantum Nature of Light</b> <span style="float:right;">November 2022</span> <br>
+                    <br><b>3. Quantum Nature of Light</b> <span class="date-proj">November 2022</span> <br>
                     <u>Sharjeel Ahmad</u><br>
                     Experimental Physics Lab II - PHY 300
                     <br><br>
@@ -323,7 +326,7 @@
                 <td style="width: 80%;">
                   <br>
                   <p class="lead mb-4">
-                    <br><b>4. Chaos in Simple Chua Circuits</b> <span style="float:right;">October 2022</span> <br>
+                    <br><b>4. Chaos in Simple Chua Circuits</b> <span class="date-proj">October 2022</span> <br>
                     <u>Sharjeel Ahmad</u><br>
                     Experimental Physics Lab II - PHY 300
                     <br><br>
@@ -347,7 +350,7 @@
                 <td style="width: 80%;">
                   <br>
                   <p class="lead mb-4">
-                    <br><b>5. Logistical Regression Analysis on Potential Diabetics</b> <span style="float:right;">March
+                    <br><b>5. Logistical Regression Analysis on Potential Diabetics</b> <span class="date-proj">March
                       2022</span> <br>
                     <u>Sharjeel Ahmad</u>, Daniel Shafi Batla and Talha Ahmed <br>
                     Statistics - MATH 231
@@ -377,7 +380,7 @@
                 <td style="width: 80%;">
                   <br>
                   <p class="lead mb-4">
-                    <br><b> Introduction to Recurrent Neural Networks </b> <span style="float:right;">November
+                    <br><b> Introduction to Recurrent Neural Networks </b> <span class="date-proj">November
                       2023</span> <br>
                     <u>Sharjeel Ahmad</u> and Hamza Akmal<br>
                     Machine Learning for Physics - PHY 603
@@ -401,8 +404,7 @@
                 <td style="width: 80%;">
                   <br>
                   <p class="lead mb-4">
-                    <br><b> Plastic Detection through Rotational Analysis using 4-Cyano-4'-pentylbiphenyl</b> <span
-                      style="float:right;">October 2023</span> <br>
+                    <br><b> Plastic Detection through Rotational Analysis using 4-Cyano-4'-pentylbiphenyl</b><span class="date-proj">October 2023</span> <br>
                     <u>Sharjeel Ahmad</u> and <a href="https://lums.edu.pk/lums_employee/5129" target="_blank"> Ammar
                       Ahmed Khan</a><br>
                     <a href="https://web.lums.edu.pk/~fmod/" taget="_blank">Functional Materials and Optoelectronic
