--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="cv/Sharjeel_s_CV.pdf">Resume</a>
+          <a class="nav-link js-scroll-trigger" href="cv/Sharjeel_s_CV.pdf" target="_blank">Resume</a>
         </li>
         <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="#about">About</a>
