spelling and new CV

--- a/index.html
+++ b/index.html
@@ -463,7 +463,7 @@
           </li></br>
           <li>
             <i class="fa-li fa fa-trophy text-warning"></i>
-            8th Best Speaker at WSDC in the English as a 2nd Languange Category <a
+            8th Best Speaker at WSDC in the English as a 2nd Language Category <a
               href="https://www.facebook.com/WSDC2019/" target="_blank"><i
                 class="fas fa-external-link-square-alt"></i></a> <span class="text-primary" style="float:right;">July
               2019</span>
