first push today

--- a/index.html
+++ b/index.html
@@ -144,6 +144,9 @@
           <a class="nav-link js-scroll-trigger" href="#projects">Projects</a>
         </li>
         <li class="nav-item">
+          <a class="nav-link js-scroll-trigger" href="#codes">Codes</a>
+        </li>
+        <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="#awards">Awards</a>
         </li>
         <li class="nav-item">
@@ -224,7 +227,7 @@
                 <td style="width: 80%;">
                   <br>
                   <p class="lead mb-4">
-                    <br><b>Fundamentals of Quantum Linear Response Theory</b> <span class="date-proj">May 2023</span>
+                    <br><b>Fundamentals of Quantum Linear Response Theory</b> <span class="date-proj text-secondary">May 2023</span>
                     <br>
                     <u>Sharjeel Ahmad</u> and <a href="https://lums.edu.pk/lums_employee/4056" target="_blank"> Adam
                       Zaman</a><br>
@@ -255,7 +258,7 @@
                 <td style="width: 80%;">
                   <br>
                   <p class="lead mb-4">
-                    <b>1. Approximate Fourier Transforms and its Applications</b> <span class="date-proj">March
+                    <b>1. Approximate Fourier Transforms and its Applications</b> <span class="date-proj text-secondary">March
                       2023</span> <br>
                     <u>Sharjeel Ahmad</u>, Rehan Ahmad and Hania Shahid <br>
                     Introduction to Quantum Information Science and Technology - PHY 612
@@ -278,7 +281,7 @@
                 <td style="width: 80%;">
                   <br>
                   <p class="lead mb-4">
-                    <br><b>2. Path Integral Quantization of Scalar, EM and Spinor Fields</b> <span class="date-proj"> March 2023</span> <br>
+                    <br><b>2. Path Integral Quantization of Scalar, EM and Spinor Fields</b> <span class="date-proj text-secondary"> March 2023</span> <br>
                     <u>Sharjeel Ahmad</u> and Ali Shahryar Khokhar <br>
                     Introduction to Quantum Field Theory - PHY 539
                     <br><br>
@@ -302,7 +305,7 @@
                 <td style="width: 80%;">
                   <br>
                   <p class="lead mb-4">
-                    <br><b>3. Quantum Nature of Light</b> <span class="date-proj">November 2022</span> <br>
+                    <br><b>3. Quantum Nature of Light</b> <span class="date-proj text-secondary">November 2022</span> <br>
                     <u>Sharjeel Ahmad</u><br>
                     Experimental Physics Lab II - PHY 300
                     <br><br>
@@ -326,7 +329,7 @@
                 <td style="width: 80%;">
                   <br>
                   <p class="lead mb-4">
-                    <br><b>4. Chaos in Simple Chua Circuits</b> <span class="date-proj">October 2022</span> <br>
+                    <br><b>4. Chaos in Simple Chua Circuits</b> <span class="date-proj text-secondary">October 2022</span> <br>
                     <u>Sharjeel Ahmad</u><br>
                     Experimental Physics Lab II - PHY 300
                     <br><br>
@@ -350,7 +353,7 @@
                 <td style="width: 80%;">
                   <br>
                   <p class="lead mb-4">
-                    <br><b>5. Logistical Regression Analysis on Potential Diabetics</b> <span class="date-proj">March
+                    <br><b>5. Logistical Regression Analysis on Potential Diabetics</b> <span class="date-proj text-secondary">March
                       2022</span> <br>
                     <u>Sharjeel Ahmad</u>, Daniel Shafi Batla and Talha Ahmed <br>
                     Statistics - MATH 231
@@ -380,7 +383,7 @@
                 <td style="width: 80%;">
                   <br>
                   <p class="lead mb-4">
-                    <br><b> Introduction to Recurrent Neural Networks </b> <span class="date-proj">November
+                    <br><b> Introduction to Recurrent Neural Networks </b> <span class="date-proj text-secondary">November
                       2023</span> <br>
                     <u>Sharjeel Ahmad</u> and Hamza Akmal<br>
                     Machine Learning for Physics - PHY 603
@@ -404,7 +407,7 @@
                 <td style="width: 80%;">
                   <br>
                   <p class="lead mb-4">
-                    <br><b> Plastic Detection through Rotational Analysis using 4-Cyano-4'-pentylbiphenyl</b><span class="date-proj">October 2023</span> <br>
+                    <br><b> Plastic Detection through Rotational Analysis using 4-Cyano-4'-pentylbiphenyl</b><span class="date-proj text-secondary">October 2023</span> <br>
                     <u>Sharjeel Ahmad</u> and <a href="https://lums.edu.pk/lums_employee/5129" target="_blank"> Ammar
                       Ahmed Khan</a><br>
                     <a href="https://web.lums.edu.pk/~fmod/" taget="_blank">Functional Materials and Optoelectronic
@@ -427,6 +430,35 @@
       </div>
     </section>
 
+    <section class="resume-section p-3 p-lg-5 d-flex justify-content-center" id="codes">
+      <div class="w-100">
+        <h2 class="mb-5">Codes</h2>
+
+        <h3 class="mb-0">Leet Codes</h3>
+        <ul class="fa-ul mb-0">
+          <li>
+            <table class="table-proj">
+              <tr>
+                <td style="width: 80%;">
+                  <br>
+                  <p class="lead mb-4">
+                    <a href="https://leetcode.com/problems/trapping-rain-water/description/" target="_blank" ><b>42. Trapping Rain Water</b></a>
+                    
+                    <br>
+                    <br>
+                    <a href="codes/Rain Water.py" target="_blank"><i class="fab fa-python"></i> Python Code</a>
+                    
+
+                  </p>
+                </td>
+              </tr>
+            </table>
+          </li>
+
+        </ul>
+      </div>
+    </section>
+
     <hr class="m-0">
 
     <section class="resume-section p-3 p-lg-5 d-flex flex-column" style="max-width:500rem" id="awards">
@@ -435,52 +467,52 @@
         <ul class="fa-ul mb-0" style="font-size:1.15rem;max-width:85rem">
           <li>
             <i class="fa-li fa fa-trophy text-warning"></i>
-            Dean's Honor List LUMS <span class="text-primary" style="float:right;">2020-Present</span>
+            Dean's Honor List LUMS <span class="text-secondary" style="float:right;">2020-Present</span>
           </li></br>
           <li>
             <i class="fa-li fa fa-trophy text-warning"></i>
             Awarded the Chandrasekhar Honorific Fellowship in Physics (Third Cohort) <a
               href="https://sbasse.lums.edu.pk/third-cohort-honorific" target="_blank"><i
-                class="fas fa-external-link-square-alt"></i></a> <span class="text-primary"
+                class="fas fa-external-link-square-alt"></i></a> <span class="text-secondary"
               style="float:right;">2023-2024</span>
           </li></br>
           <li>
             <i class="fa-li fa fa-trophy text-warning"></i>
             Awarded the Chandrasekhar Honorific Fellowship in Physics (Second Cohort) <a
               href="https://sbasse.lums.edu.pk/second-cohort-honorific" target="_blank"><i
-                class="fas fa-external-link-square-alt"></i></a> <span class="text-primary"
+                class="fas fa-external-link-square-alt"></i></a> <span class="text-secondary"
               style="float:right;">2022-2023</span>
           </li></br>
           <li>
             <i class="fa-li fa fa-trophy text-warning"></i>
-            Awarded a Merit Scholarship at LUMS School of Science & Engineering <span class="text-primary"
+            Awarded a Merit Scholarship at LUMS School of Science & Engineering <span class="text-secondary"
               style="float:right;"> 2021-2022 </span>
           </li></br>
           <li>
             <i class="fa-li fa fa-trophy text-warning"></i>
-            Awarded a Merit Scholarship at LUMS School of Science & Engineering <span class="text-primary"
+            Awarded a Merit Scholarship at LUMS School of Science & Engineering <span class="text-secondary"
               style="float:right;"> 2020-2021 </span>
           </li></br>
           <li>
             <i class="fa-li fa fa-trophy text-warning"></i>
             8th Best Speaker at WSDC in the English as a 2nd Language Category <a
               href="https://www.facebook.com/WSDC2019/" target="_blank"><i
-                class="fas fa-external-link-square-alt"></i></a> <span class="text-primary" style="float:right;">July
+                class="fas fa-external-link-square-alt"></i></a> <span class="text-secondary" style="float:right;">July
               2019</span>
           </li></br>
           <li>
             <i class="fa-li fa fa-trophy text-warning"></i>
-            Awarded a 120% Merit Scholarship at The Lahore Alma, Lahore, Pakistan <span class="text-primary"
+            Awarded a 120% Merit Scholarship at The Lahore Alma, Lahore, Pakistan <span class="text-secondary"
               style="float:right;">2018-2020</span>
           </li></br>
           <li>
             <i class="fa-li fa fa-trophy text-warning"></i>
-            Won the Highest Academic Acheiver Award at The Lahore Alma, Lahore, Pakistan <span class="text-primary"
+            Won the Highest Academic Acheiver Award at The Lahore Alma, Lahore, Pakistan <span class="text-secondary"
               style="float:right;">June 2018</span>
           </li></br>
           <li>
             <i class="fa-li fa fa-trophy text-warning"></i>
-            Finalist All Pakistan Junior National Debating Championship <span class="text-primary"
+            Finalist All Pakistan Junior National Debating Championship <span class="text-secondary"
               style="float:right;">February 2018</span>
           </li>
         </ul>
@@ -493,12 +525,12 @@
         <ul class="fa-ul mb-0" style="font-size:1.15rem;max-width:85rem">
           <li>
             <i class="fa-li fa"></i>
-            Pakistan National Debate Team Selector <span class="text-primary" style="float:right;">January 2023</span>
+            Pakistan National Debate Team Selector <span class="text-secondary" style="float:right;">January 2023</span>
           </li>
           </br>
           <li>
             <i class="fa-li fa"></i>
-            Volunteer at Bloodlink - LUMS Community Service Society <span class="text-primary"
+            Volunteer at Bloodlink - LUMS Community Service Society <span class="text-secondary"
               style="float:right;">2021-2022</span>
           </li>
           </br>
