some more changes

--- a/index.html
+++ b/index.html
@@ -178,12 +178,12 @@
         <h1 class="mb-0">Sharjeel
           <span class="text-primary">Ahmad</span>
         </h1>
-        <div class="subheading mb-5">Physics Undergraduate · LUMS
+        <div class="subheading mb-5">Masters in Physics · UIUC 
         </div>
 
         <p class="lead mb-5">
-          I am an Undergraduate Student in Physics (Mathematics Minor) at <a href="https://lums.edu.pk/"
-            target="_blank">Lahore University of Management Sciences </a> (LUMS), where I work with Prof. Adam Zaman on
+          I am an Graduate Student in Physics at <a href="https://physics.illinois.edu/"
+            target="_blank">University of Illinois Urbana-Champaign </a> (UIUC), where I work with Prof. Eric Chitambar on
           Open Quantum Dynamics and Information Theory.
 
           <br /><br />My broad research interests include <a href="https://sbasse.lums.edu.pk/the-quantum-revolution"
@@ -219,7 +219,7 @@
 
         <h2 class="mb-5">Projects</h2>
 
-        <h3 class="mb-0">Directed Research Project</h3>
+        <h3 class="mb-0">Directed Research</h3>
         <ul class="fa-ul mb-0">
           <li>
             <table class="table-proj">
@@ -227,14 +227,15 @@
                 <td style="width: 80%;">
                   <br>
                   <p class="lead mb-4">
-                    <br><b>Fundamentals of Quantum Linear Response Theory</b> <span class="date-proj text-secondary">May 2023</span>
+                    <br><b> General Kubo Formulation for
+Open Finite Quantum Systems</b> <span class="date-proj text-secondary">May 2024</span>
                     <br>
                     <u>Sharjeel Ahmad</u> and <a href="https://lums.edu.pk/lums_employee/4056" target="_blank"> Adam
                       Zaman</a><br>
-                    Preliminary Senior Year Thesis
+                    Senior Year Thesis
                     <br><br>
 
-                    <a href="projects/DRP Report.pdf" target="_blank"><i class="fa fa-1x fa-file-pdf"></i> PDF</a>
+                    <a href="projects/Senior_Year_Project_Revised_Report.pdf" target="_blank"><i class="fa fa-1x fa-file-pdf"></i> PDF</a>
                     &nbsp;&nbsp;&nbsp;&nbsp;
 
                   </p>
@@ -258,7 +259,31 @@
                 <td style="width: 80%;">
                   <br>
                   <p class="lead mb-4">
-                    <b>1. Approximate Fourier Transforms and its Applications</b> <span class="date-proj text-secondary">March
+                    <b>1. Resource Theory of
+non-Gaussian Operations</b> <span class="date-proj text-secondary">December
+                      2024</span> <br>
+                    <u>Sharjeel Ahmad</u> and <a href="https://ece.illinois.edu/about/directory/faculty/echitamb" target="_blank">Eric Chitambar</a> <br>
+                    Quantum Info Processing Theory - ECE 498
+                    <br><br>
+                    <a class="lead mb-4" href="projects/Review Paper.pdf" target="_blank"><i
+                        class="fa fa-1x fa-file-pdf"></i> PDF</a> &nbsp;&nbsp;&nbsp;&nbsp;
+                  </p>
+                </td>
+                <td>
+                  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                  <img src="pics/nonguassian.png" class="img-proj">
+                </td>
+              </tr>
+            </table>
+          </li>
+
+          <li>
+            <table class="table-proj">
+              <tr>
+                <td style="width: 80%;">
+                  <br>
+                  <p class="lead mb-4">
+                    <b>2. Approximate Fourier Transforms and its Applications</b> <span class="date-proj text-secondary">March
                       2023</span> <br>
                     <u>Sharjeel Ahmad</u>, Rehan Ahmad and Hania Shahid <br>
                     Introduction to Quantum Information Science and Technology - PHY 612
@@ -281,7 +306,7 @@
                 <td style="width: 80%;">
                   <br>
                   <p class="lead mb-4">
-                    <br><b>2. Path Integral Quantization of Scalar, EM and Spinor Fields</b> <span class="date-proj text-secondary"> March 2023</span> <br>
+                    <br><b>3. Path Integral Quantization of Scalar, EM and Spinor Fields</b> <span class="date-proj text-secondary"> March 2023</span> <br>
                     <u>Sharjeel Ahmad</u> and Ali Shahryar Khokhar <br>
                     Introduction to Quantum Field Theory - PHY 539
                     <br><br>
@@ -305,7 +330,7 @@
                 <td style="width: 80%;">
                   <br>
                   <p class="lead mb-4">
-                    <br><b>3. Quantum Nature of Light</b> <span class="date-proj text-secondary">November 2022</span> <br>
+                    <br><b>4. Quantum Nature of Light</b> <span class="date-proj text-secondary">November 2022</span> <br>
                     <u>Sharjeel Ahmad</u><br>
                     Experimental Physics Lab II - PHY 300
                     <br><br>
@@ -329,7 +354,7 @@
                 <td style="width: 80%;">
                   <br>
                   <p class="lead mb-4">
-                    <br><b>4. Chaos in Simple Chua Circuits</b> <span class="date-proj text-secondary">October 2022</span> <br>
+                    <br><b>5. Chaos in Simple Chua Circuits</b> <span class="date-proj text-secondary">October 2022</span> <br>
                     <u>Sharjeel Ahmad</u><br>
                     Experimental Physics Lab II - PHY 300
                     <br><br>
@@ -353,7 +378,7 @@
                 <td style="width: 80%;">
                   <br>
                   <p class="lead mb-4">
-                    <br><b>5. Logistical Regression Analysis on Potential Diabetics</b> <span class="date-proj text-secondary">March
+                    <br><b>6. Logistical Regression Analysis on Potential Diabetics</b> <span class="date-proj text-secondary">March
                       2022</span> <br>
                     <u>Sharjeel Ahmad</u>, Daniel Shafi Batla and Talha Ahmed <br>
                     Statistics - MATH 231
