--- a/index.html
+++ b/index.html
@@ -182,19 +182,17 @@
         </div>
 
         <p class="lead mb-5">
-          I am an Graduate Student in Physics at <a href="https://physics.illinois.edu/"
-            target="_blank">University of Illinois Urbana-Champaign </a> (UIUC), where I work with Prof. Eric Chitambar on
-          Open Quantum Dynamics and Information Theory.
+          I am a Graduate Student in Physics at <a href="https://physics.illinois.edu/"
+            target="_blank">University of Illinois Urbana-Champaign </a> (UIUC), where I am working with <a href="https://ece.illinois.edu/about/directory/faculty/echitamb" target="_blank"> Prof. Eric Chitambar</a>  on Optimizing Quantum Teleportation Protocols.
+<br /><br />
+I have previously worked with <a href="https://iquist.illinois.edu/people/paul-kwiat" target="_blank"> Prof. Paul Kwiat </a>on multi-depth holography and linear optics as well as with <a href="https://ece.illinois.edu/about/directory/faculty/kfang3" target="_blank" > Prof. Kejie Fang </a>on Quantum Non-Gaussian Correlations, Photon Wavelength Conversion and Higher Dimensional Quantum Teleportation Protocols.
+<br /><br />
+My broad research interests include <a href="https://physics.illinois.edu/research/groups-and-centers/qis" target="_blank"> Quantum Information Science </a>and <a href="https://physics.illinois.edu/research/groups-and-centers/amo" target="_blank">Quantum Optics </a>– in particular, I am interested in Quantum Error Correction and building Fault Tolerant Protocols using various analytical and computational tools.
+<br /><br />
+My non-academic interests include tennis, parliamentary debating and futures trading. 
 
-          <br /><br />My broad research interests include <a href="https://sbasse.lums.edu.pk/the-quantum-revolution"
-            target="_blank">Quantum Information Theory</a> and <a
-            href="https://sbasse.lums.edu.pk/the-quantum-revolution" target="_blank">Quantum Many-Body Systems</a>
-          &#8211; in particular, I am interested in Quantum Error Correction through Decoherence reduction and Lindblad
-          Master Equations associated with Markovian Dynamics.
 
-          <br /><br />I also work at the <a href="https://lgsdefence.edu.pk/" target="_blank">Lahore Grammar School
-            Defence Campus</a> as a full time public speaking coach. My non-academic interests include tennis, mixed
-          martial arts and video games.
+          
         </p>
 
         <!-- <p class="subheading"><h3>Recent News</h3>
@@ -492,7 +490,7 @@ non-Gaussian Operations</b> <span class="date-proj text-secondary">December
         <ul class="fa-ul mb-0" style="font-size:1.15rem;max-width:85rem">
           <li>
             <i class="fa-li fa fa-trophy text-warning"></i>
-            Dean's Honor List LUMS <span class="text-secondary" style="float:right;">2020-Present</span>
+            Dean's Honor List LUMS <span class="text-secondary" style="float:right;">2020-2024</span>
           </li></br>
           <li>
             <i class="fa-li fa fa-trophy text-warning"></i>
@@ -548,6 +546,11 @@ non-Gaussian Operations</b> <span class="date-proj text-secondary">December
       <div class="my-auto">
         <h2 class="mb-5">Service</h2>
         <ul class="fa-ul mb-0" style="font-size:1.15rem;max-width:85rem">
+          <li>
+            <i class="fa-li fa"></i>
+            Pakistan National Debate Team Coach <span class="text-secondary" style="float:right;">January 2024</span>
+          </li>
+          </br>
           <li>
             <i class="fa-li fa"></i>
             Pakistan National Debate Team Selector <span class="text-secondary" style="float:right;">January 2023</span>
