--- a/index.html
+++ b/index.html
@@ -845,7 +845,7 @@
 					</table>
 
 					<br />
-					<h3 class="mb-0">Quantitative Finance</h3>
+					<h3 class="mb-0">Quantitative Finance - MATH 449</h3>
 					<br />
 					<table class="table-proj">
 						<tr>
@@ -893,7 +893,7 @@
 					</table>
 
 					<br />
-					<h3 class="mb-0">Modern Computational Physics</h3>
+					<h3 class="mb-0">Modern Computational Physics - PHY 446</h3>
 					<br />
 					<table class="table-proj">
 						<tr>
@@ -913,22 +913,10 @@
 						<tr>
 							<td>
 								<p class="lead mb-4">
-									<b>Sand</b>
-									<br /><br />
-									<a href="codes/Sand.py" target="_blank"
-										><i class="fab fa-python"></i> Python
-										Code</a
-									>
-								</p>
-							</td>
-						</tr>
-						<tr>
-							<td>
-								<p class="lead mb-4">
-									<b> Large Sand</b>
+									<b>Sand Simulation</b>
 									<br /><br />
 									<a
-										href="codes/Large Sand.py"
+										href="codes/Sand Simulation.py"
 										target="_blank"
 										><i class="fab fa-python"></i> Python
 										Code</a
@@ -989,24 +977,6 @@
 									<a
 										href="codes/Restricted Boltzmann Machines.py"
 										target="_blank"
-										><i class="fab fa-python"></i> Python
-										Code</a
-									>
-								</p>
-							</td>
-						</tr>
-					</table>
-
-					<br />
-					<h3 class="mb-0">Machine learning in Physics</h3>
-					<br />
-					<table class="table-proj">
-						<tr>
-							<td>
-								<p class="lead mb-4">
-									<b></b>
-									<br /><br />
-									<a href="codes/.py" target="_blank"
 										><i class="fab fa-python"></i> Python
 										Code</a
 									>
