--- a/index.html
+++ b/index.html
@@ -750,14 +750,15 @@
 									<a
 										href="https://leetcode.com/problems/add-two-numbers/"
 										target="_blank"
-										><b>2. Add Two Numbers</b></a
+										><b>2. Add Two Numbers!!!</b></a
 									>
 									<br /><br />
 									<a
 										href="codes/Add Two Numbers.py"
 										target="_blank"
-										><i class="fab fa-python"></i> Python
-										Code</a
+										type="text/plain"
+										><i class="fab fa-python"></i> View
+										Python Code</a
 									>
 								</p>
 							</td>
