--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 		<meta name="author" content="Sharjeel Ahmad" />
 		<meta
 			name="keywords"
-			content="UIUC, Sharjeel Ahmad, Machine learning, physics, masters, quantum information"
+			content="UIUC, Sharjeel Ahmad, Machine learning, physics, masters, Computational Physics, quantum information"
 		/>
 
 		<title>Sharjeel Ahmad &bull; Physics Graduate @ UIUC</title>
