--- a/index.html
+++ b/index.html
@@ -730,7 +730,7 @@
 				<div class="w-100">
 					<h2 class="mb-5">Codes</h2>
 
-					<h3 class="mb-0">Leet Codes</h3>
+					<!-- <h3 class="mb-0">Leet Codes</h3>
 					<br />
 					<table class="table-proj">
 						<tr>
@@ -847,7 +847,7 @@
 						</tr>
 					</table>
 
-					<br />
+					<br /> -->
 					<h3 class="mb-0">Quantitative Finance - MATH 449</h3>
 					<br />
 					<table class="table-proj">
