--- a/index.html
+++ b/index.html
@@ -632,6 +632,46 @@
 										<br />
 										<p class="lead mb-4">
 											<br /><b>
+												Photonic Quantum Computing
+											</b>
+											<span
+												class="date-proj text-secondary"
+												>May 2025</span
+											>
+											<br />
+											<u>Sharjeel Ahmad</u> and Paul Kwiat<br />
+											Quantum Optics and Information - PHY
+											513
+											<br /><br />
+
+											<a
+												href="presentations/Photon Quantum Circuits.pptx"
+												target="_blank"
+												><i
+													class="fas fa-1x fa-window-maximize"
+												></i>
+												Slides</a
+											>
+											&nbsp;&nbsp;&nbsp;&nbsp;
+										</p>
+									</td>
+									<td>
+										&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+										<img
+											src="pics/rnn.png"
+											class="img-proj"
+										/>
+									</td>
+								</tr>
+							</table>
+						</li>
+						<li>
+							<table class="table-proj">
+								<tr>
+									<td style="width: 80%">
+										<br />
+										<p class="lead mb-4">
+											<br /><b>
 												Introduction to Recurrent Neural
 												Networks
 											</b>
