--- a/index.html
+++ b/index.html
@@ -639,7 +639,12 @@
 												>May 2025</span
 											>
 											<br />
-											<u>Sharjeel Ahmad</u> and Paul Kwiat<br />
+											<u>Sharjeel Ahmad</u> and <a
+												href="https://iquist.illinois.edu/people/paul-kwiat"
+												target="_blank"
+											>
+												Paul Kwiat</a
+											><br />
 											Quantum Optics and Information - PHY
 											513
 											<br /><br />
@@ -658,7 +663,7 @@
 									<td>
 										&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 										<img
-											src="pics/rnn.png"
+											src="pics/pcc.png"
 											class="img-proj"
 										/>
 									</td>
