--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
 						>
 							Prof. Eric Chitambar</a
 						>
-						on Optimizing Quantum Teleportation Protocols.
+						on Optimizing Quantum Teleportation  and Dense Coding Protocols.
 						<br /><br />
 						I have previously worked with
 						<a
