--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
 					<li class="nav-item">
 						<a
 							class="nav-link js-scroll-trigger"
-							href="cv/Sharjeel_s_CV.pdf"
+							href="cv/GitHub CV.pdf"
 							target="_blank"
 							>Resume</a
 						>
